# homework

Week_1/: Age.cpp  Array_and_pointers.cpp  Proper_Array_and_pointers.cpp  Read_matrix_header.cpp
Week_1/Quiz/: CMakeCache.txt  CMakeLists.txt  Makefile  Quiz.cpp  Quiz.h  Quiz.kdev4  cmake_install.cmake
Week_1/Quiz/.kdev4/: Quiz.kdev4
