cmake_minimum_required(VERSION 2.8)
project(Quiz)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(HEADERS ${CMAKE_SOURCE_DIR})

include_directories("${PROJECT_SOURCE_DIR}")

find_package(Boost 1.46 COMPONENTS program_options REQUIRED)
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

add_executable(Quiz ${PROJECT_SOURCE_DIR}/Quiz.cpp)
TARGET_LINK_LIBRARIES( Quiz LINK_PUBLIC ${Boost_LIBRARIES} )
TARGET_LINK_LIBRARIES( Quiz ${HEADERS} )

